finalisation du système de statistiques MongoDB + ajout des boutons j'aime

--- a/.env
+++ b/.env
@@ -35,7 +35,10 @@ APP_SECRET=ac6c9a39d47bab47de5bf3abdd8d8f7c
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
-
+###> mongodb ###
+MONGODB_URI=mongodb://127.0.0.1:27017
+MONGODB_DB="statistiques"
+MONGODB_LIKES_COLLECTION="likes_counters"
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+ MAILER_DSN=null://null
 ###< symfony/mailer ###
