--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,22 +3,27 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
-parameters:
+# config/services.yaml
+parameters: {}
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # Defaults for services in this file
+  _defaults:
+    autowire: true # Injecte automatiquement les dépendances par type-hint
+    autoconfigure: true # Ajoute automatiquement les tags (commands, subscribers, etc.)
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+  # Expose toutes les classes de src/ comme services (sauf exclusions)
+  App\:
+    resource: "../src/"
+    exclude:
+      - "../src/DependencyInjection/"
+      - "../src/Entity/"
+      - "../src/Kernel.php"
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # Client MongoDB injecté (URL lue depuis .env -> MONGODB_URI)
+  MongoDB\Client:
+    arguments:
+      $uri: "%env(resolve:MONGODB_URI)%"
+
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
