--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=ac6c9a39d47bab47de5bf3abdd8d8f7c
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/zooarcadia?serverVersion=mariadb-10.4.32"
-# DATABASE_URL="mysql://wpuag6h82b11m6i7:x0m4zf3b597abg9u@f80b6byii2vwv8cx.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/yfnkm4lvqps5djol"
+DATABASE_URL="mysql://wpuag6h82b11m6i7:x0m4zf3b597abg9u@f80b6byii2vwv8cx.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/yfnkm4lvqps5djol"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
